# ContourSimplification

./: CMakeLists.txt  README.md  contour_reader.cpp  contour_reader.h  contour_simplification.cpp  contour_simplification.h  contour_to_shape.cpp  contour_to_shape.h  decomposition.cpp  decomposition.h  simplify.cpp  simplify.h  util.h
io_contours/: CMakeLists.txt  contour_types.cpp  contour_types.h  contours.cpp  contours.h  cw_ordering.cpp  cw_ordering.h  intersect.cpp  intersect.h  mif_outputter.cpp  mif_outputter.h  outer_curves.cpp  outer_curves.h  ridge_removal.cpp  ridge_removal.h  tin_to_triangle.cpp  tin_to_triangle.h  topology.cpp  topology.h
